package com.example.design.Proxy.jdkProxy;

/**
* 要代理的接口
*/
public interface IPerson {
    void learn();
}