@startuml
'https://plantuml.com/class-diagram

interface IPerson{
learn()
}
class Zhangsan implements IPerson{
learn()
}

interface InvocationHandler{
invoke()
}
class JdkInvocationHandler implements InvocationHandler{
getInstance()
invoke()
}
class TestProxy{
main()
}

class $Proxy0 extends Proxy implements IPerson {
learn()
}
class Proxy{
InvocationHandler h
newProxyInstance()
}
JdkInvocationHandler-->$Proxy0:生成代理类
JdkInvocationHandler-->IPerson
TestProxy-->JdkInvocationHandler
@enduml